add scenes one and two

--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tim McMahon's Portfolio</title>
+    <title>Vite App</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <canvas id="bg"></canvas>
+    <div class="background-scene-one background-scene-one--visible"></div>
+    <div class="background-scene-two"></div>
+    <div class="background-scene-three"></div>
+    <main>
+      <!-- content goes here -->
+    </main>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
