--- a/index.html
+++ b/index.html
@@ -11,18 +11,65 @@
     ></script>
   </head>
   <body>
-    <nav class="layout layout__nav">
-      <a class="logo-link" href="index.html">
+    <div class="fade-in"></div>
+    <header class="layout layout__header">
+      <div class="nav-logo-name-wrapper">
+        <!-- <a class="logo-link" href="index.html"> -->
         <img
           class="logo-image"
           src="./assets/images/tm-logo.svg"
           alt="blue cube with letters T M"
         />
-      </a>
-      <p class="nav-text paragraph paragraph--large color--white">
-        tim mcmahon
-      </p>
-    </nav>
+        <!-- </a> -->
+        <p class="nav-text paragraph paragraph--large color--white">
+          tim mcmahon
+        </p>
+      </div>
+      <button class="nav-toggle">
+        <span class="hamburger"></span>
+      </button>
+      <nav class="nav">
+        <ul class="nav-list">
+          <li class="nav-link__one">
+            <button
+              href="index.html#projects"
+              class="heading heading__2 color--white nav-link"
+            >
+              WHAT I DO
+            </button>
+          </li>
+          <li class="nav-link__two">
+            <button
+              href="index.html#artwork"
+              class="heading heading__2 color--white nav-link"
+            >
+              WHAT I'VE MADE
+            </button>
+          </li>
+          <li class="nav-link__three">
+            <button
+              href="index.html#about"
+              class="heading heading__2 color--white nav-link"
+            >
+              WHO I AM
+            </button>
+          </li>
+          <li class="heading heading__2 color--white">
+            <a class="nav-link" href="mailto:tfmcmahon@gmail.com"> EMAIL </a>
+          </li>
+          <li class="heading heading__2 color--white">
+            <a
+              class="nav-link"
+              href="./assets/images/TimMcMahonResume.pdf"
+              rel="noopener noreferrer"
+              target="_blank"
+            >
+              RESUME
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
     <main>
       <div class="layout">
@@ -36,8 +83,7 @@
                 (basic, complex, and custom) and context — is my preferred
                 front-end framework. I'm also familiar with Next.js, Gatsby.js,
                 Sass, and Redux. I am a fast learner and love trying out new
-                tech. Check out my resume at the top of the page to see all of
-                my technical skills.
+                tech.
               </p>
             </li>
             <li>
@@ -52,56 +98,48 @@
             </li>
           </ul>
           <div class="cta">
-            <button class="scroll-button">
+            <h3 class="heading heading__3">SCROLL DOWN</h3>
+            <button class="scroll-button scroll-button__down">
               <i class="fa fa-solid fa-arrow-down"></i>
             </button>
-            <h3 class="heading heading__3 spacing__right">SCROLL DOWN</h3>
           </div>
         </section>
 
-        <section class="content__right content__two">
+        <section class="content content__right content__two">
           <h1 class="heading heading__1 color--white">WHAT I'VE MADE</h1>
-          <div class="copy color--white">
-            <p class="paragraph spacing__bottom">
-              I am a TypeScript/JavaScript developer with a passion for clean,
-              efficient code. React — including hooks (basic, complex, and
-              custom) and context — is my preferred front-end framework. I'm
-              also familiar with Next.js, Gatsby.js, Sass, and Redux. I am a
-              fast learner and love trying out new tech. Check out my resume at
-              the top of the page to see all of my technical skills.
-            </p>
-            <div class="cta cta__right spacing__top--2">
-              <a>
-                <img />
-              </a>
-              <h3 class="heading heading__3 color--white spacing__right">
-                SCROLL
-              </h3>
-              <a>
-                <img />
-              </a>
-            </div>
+          <p class="paragraph color--white">
+            I am a TypeScript/JavaScript developer with a passion for clean,
+            efficient code. React — including hooks (basic, complex, and custom)
+            and context — is my preferred front-end framework. I'm also familiar
+            with Next.js, Gatsby.js, Sass, and Redux. I am a fast learner and
+            love trying out new tech. Check out my resume at the top of the page
+            to see all of my technical skills.
+          </p>
+          <div class="cta cta__right">
+            <button class="scroll-button scroll-button__up">
+              <i class="fa fa-solid fa-arrow-up"></i>
+            </button>
+            <h3 class="heading heading__3">SCROLL</h3>
+            <button class="scroll-button scroll-button__down">
+              <i class="fa fa-solid fa-arrow-down"></i>
+            </button>
           </div>
         </section>
 
-        <section class="content__left content__three">
+        <section class="content content__left content__three">
           <h1 class="heading heading__1 color--white">WHO I AM</h1>
-          <div class="copy color--white">
-            <p class="paragraph color--white spacing__bottom">
-              Hey! I'm a software engineer currently working at a technical
-              consulting firm building custom web solutions for Fortune 1000
-              clients. Since beginning my career in engineering, I've rapidly
-              increased my skills in TypeScript, React, and static site
-              generation by writing thousands of lines of production code!
-            </p>
-            <div class="cta spacing__top--2">
-              <a>
-                <img />
-              </a>
-              <h3 class="heading heading__3 color--white spacing__right">
-                SCROLL UP
-              </h3>
-            </div>
+          <p class="paragraph color--white">
+            Hey! I'm a software engineer currently working at a technical
+            consulting firm building custom web solutions for Fortune 1000
+            clients. Since beginning my career in engineering, I've rapidly
+            increased my skills in TypeScript, React, and static site generation
+            by writing thousands of lines of production code!
+          </p>
+          <div class="cta">
+            <button class="scroll-button scroll-button__up">
+              <i class="fa fa-solid fa-arrow-up"></i>
+            </button>
+            <h3 class="heading heading__3 color--white">SCROLL UP</h3>
           </div>
         </section>
       </div>
@@ -112,16 +150,47 @@
       <div class="background-scene-three"></div>
     </main>
     <footer class="layout layout__footer">
-      <a class="email-link color--black" href="mailto:tfmcmahon@gmail.com">
+      <a
+        class="email-link__one heading heading__2"
+        href="mailto:tfmcmahon@gmail.com"
+      >
         tfmcmahon@gmail.com
       </a>
       <a
-        class="resume-link"
+        class="email-link__two heading heading__2"
+        href="mailto:tfmcmahon@gmail.com"
+      >
+        tfmcmahon@gmail.com
+      </a>
+      <a
+        class="email-link__three heading heading__2"
+        href="mailto:tfmcmahon@gmail.com"
+      >
+        tfmcmahon@gmail.com
+      </a>
+      <a
+        class="resume-button__one heading heading__2"
         href="./assets/images/TimMcMahonResume.pdf"
         rel="noopener noreferrer"
         target="_blank"
       >
-        <button class="button heading heading__3">RESUME</button>
+        RESUME
+      </a>
+      <a
+        class="resume-button__two heading heading__2"
+        href="./assets/images/TimMcMahonResume.pdf"
+        rel="noopener noreferrer"
+        target="_blank"
+      >
+        RESUME
+      </a>
+      <a
+        class="resume-button__three heading heading__2"
+        href="./assets/images/TimMcMahonResume.pdf"
+        rel="noopener noreferrer"
+        target="_blank"
+      >
+        RESUME
       </a>
       <img
         class="shredies"
@@ -131,5 +200,6 @@
       <div class="solid-white"></div>
     </footer>
     <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/src/nav.ts"></script>
   </body>
 </html>
