--- a/cgi-gallery.html
+++ b/cgi-gallery.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     />
-    <link rel="stylesheet" href="./src/cgi.css" />
+    <link rel="stylesheet" href="./src/style.scss" />
     <link rel="stylesheet" href="./src/lightbox.min.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&family=Asap:wght@400;600&display=swap"
@@ -288,13 +288,13 @@
     <!--Footer-->
     <footer class="layout layout__footer not-fixed">
       <a
-        class="email-link__one heading heading__2"
+        class="email-link__one-cgi heading heading__2"
         href="mailto:tfmcmahon@gmail.com"
       >
         tfmcmahon@gmail.com
       </a>
       <a
-        class="resume-button__one heading heading__2"
+        class="resume-button__one-cgi heading heading__2"
         href="./assets/images/TimMcMahonResume.pdf"
         rel="noopener noreferrer"
         target="_blank"
@@ -302,11 +302,11 @@
         RESUME
       </a>
       <img
-        class="shredies"
+        class="shredies-cgi"
         src="./assets/images/transition1.svg"
         alt="a transitioning image"
       />
-      <div class="solid-white"></div>
+      <div class="solid-gray"></div>
     </footer>
 
     <script type="module" src="/src/nav.ts"></script>
