--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       src="https://kit.fontawesome.com/a121fe4163.js"
       crossorigin="anonymous"
     ></script>
+    <script type="module" crossorigin src="/assets/index.2b87a348.js"></script>
+    <link rel="stylesheet" href="/assets/index.efb6c7c1.css" />
   </head>
   <body>
     <div class="fade-in"></div>
@@ -263,7 +265,7 @@
       />
       <div class="solid-white"></div>
     </footer>
-    <script type="module" src="/src/main.ts"></script>
-    <script type="module" src="/src/nav.ts"></script>
+    <!-- <script type="module" src="/src/main.ts"></script> -->
+    <script type="module" src="/src/nav.js"></script>
   </body>
 </html>
