re-link scripts

--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&family=Asap:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
     <script
       src="https://kit.fontawesome.com/a121fe4163.js"
       crossorigin="anonymous"
     ></script>
-    <script type="module" crossorigin src="/assets/index.2b87a348.js"></script>
-    <link rel="stylesheet" href="/assets/index.efb6c7c1.css" />
+    <script type="module" crossorigin src="./src/index.2b87a348.js"></script>
+    <script type="module" crossorigin src="./src/nav.js"></script>
+    <link rel="stylesheet" href="./src/index.efb6c7c1.css" />
   </head>
   <body>
     <div class="fade-in"></div>
@@ -265,7 +270,5 @@
       />
       <div class="solid-white"></div>
     </footer>
-    <!-- <script type="module" src="/src/main.ts"></script> -->
-    <script type="module" src="/src/nav.js"></script>
   </body>
 </html>
