--- a/cgi-gallery.html
+++ b/cgi-gallery.html
@@ -9,7 +9,6 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     />
-    <link rel="stylesheet" href="./src/lightbox.min.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&family=Asap:wght@400;600&display=swap"
       rel="stylesheet"
@@ -18,8 +17,10 @@
       src="https://kit.fontawesome.com/a121fe4163.js"
       crossorigin="anonymous"
     ></script>
-    <script type="module" crossorigin src="/assets/index.2b87a348.js"></script>
-    <link rel="stylesheet" href="/assets/index.efb6c7c1.css" />
+    <script type="module" crossorigin src="./src/index.2b87a348.js"></script>
+    <script type="module " crossorigin src="./src/nav.js"></script>
+    <link rel="stylesheet" href="./src/lightbox.min.css" />
+    <link rel="stylesheet" href="./src/index.efb6c7c1.css" />
   </head>
   <body>
     <header class="layout layout__header solid-black">
@@ -310,7 +311,6 @@
       <div class="solid-gray"></div>
     </footer>
 
-    <script type="module" src="/src/nav.js"></script>
     <script src="./src/lightbox-plus-jquery.min.js"></script>
     <script>
       lightbox.option({
