--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       crossorigin="anonymous"
     ></script>
     <script type="module" crossorigin src="./src/index.2b87a348.js"></script>
-    <script type="module" crossorigin src="./src/nav.js"></script>
+    <script type="module" src="./src/nav.js"></script>
     <link rel="stylesheet" href="./src/index.efb6c7c1.css" />
   </head>
   <body>
