--- a/cgi-gallery.html
+++ b/cgi-gallery.html
@@ -17,9 +17,9 @@
       src="https://kit.fontawesome.com/a121fe4163.js"
       crossorigin="anonymous"
     ></script>
-    <script type="module" crossorigin src="./src/index.2b87a348.js"></script>
     <script type="module " src="./src/nav.js"></script>
     <link rel="stylesheet" href="./src/lightbox.min.css" />
+    <link rel="stylesheet" href="./src/index.efb6c7c1.css" />
   </head>
   <body>
     <header class="layout layout__header solid-black">
