remove type module from nav scripts

--- a/cgi-gallery.html
+++ b/cgi-gallery.html
@@ -309,7 +309,7 @@
       />
       <div class="solid-gray"></div>
     </footer>
-    <script type="module " src="./src/nav.js"></script>
+    <script src="./src/nav.js"></script>
     <script src="./src/lightbox-plus-jquery.min.js"></script>
     <script>
       lightbox.option({
