--- a/index.html
+++ b/index.html
@@ -270,6 +270,6 @@
       />
       <div class="solid-white"></div>
     </footer>
-    <script type="module" src="./src/nav.js"></script>
+    <script src="./src/nav.js"></script>
   </body>
 </html>
