--- a/cgi-gallery.html
+++ b/cgi-gallery.html
@@ -3,6 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta name="description" content="Tim McMahon's personal site" />
+    <meta name="title" property="og:title" content="Tim McMahon" />
+    <meta property="og:type" content="Website" />
+    <meta
+      name="image"
+      property="og:image"
+      content="https://i.imgur.com/jwGwGhN.jpg"
+    />
+    <meta
+      name="description"
+      property="og:description"
+      content="Tim McMahon's personal site"
+    />
     <title>Tim McMahon's portfolio (CGI art)</title>
     <link rel="icon" type="image/svg+xml" href="favicon.ico" />
     <link
