update meta info

--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta name="description" content="Tim McMahon's personal site" />
-    <meta name="title" property="og:title" content="Tim McMahon" />
+    <meta
+      name="description"
+      content="I am a TypeScript/JavaScript FrontEnd developer with a passion for clean, efficient code. React — including hooks (basic, complex, and custom) and context — is my preferred front-end framework. I'm also familiar with Next.js, Sass, and Redux. I am a fast learner and love trying out new tech."
+    />
+    <meta
+      name="title"
+      property="og:title"
+      content="Tim McMahon's Personal Site"
+    />
     <meta property="og:type" content="Website" />
     <meta
       name="image"
@@ -17,7 +24,7 @@
       property="og:description"
       content="Tim McMahon's personal site"
     />
-    <meta name="author" content="_" />
+    <meta name="author" content="Tim McMahon" />
 
     <title>Tim McMahon's Portfolio</title>
     <link rel="icon" type="image/svg+xml" href="favicon.ico" />
