update og description

--- a/cgi-gallery.html
+++ b/cgi-gallery.html
@@ -22,7 +22,7 @@
     <meta
       name="description"
       property="og:description"
-      content="Tim McMahon's personal site"
+      content="I am a TypeScript/JavaScript FrontEnd developer with a passion for clean, efficient code. React — including hooks (basic, complex, and custom) and context — is my preferred front-end framework. I'm also familiar with Next.js, Sass, and Redux. I am a fast learner and love trying out new tech."
     />
     <meta name="author" content="Tim McMahon" />
     <meta
