--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta
       name="image"
       property="og:image"
-      content="https://i.imgur.com/Ov4INln.jpg"
+      content="https://i.imgur.com/lvGPRoC.jpg"
     />
     <meta
       name="description"
